# zero2prod-newsletter-api

./: Cargo.toml  Dockerfile  configuration.yaml  package-lock.json
.github/workflows/: rust-ci.yml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
